# libtinymt

./: CMakeLists.txt  LICENSE  NOTICE  README.md
.github/workflows/: cmake.yml
src/libtinymt/: tinymt.cc  tinymt.h
src/tinymt/: tinymt.cc  tinymt.h  tinymt_test.cc
test/: test_main.cc
